--- a/catalogs/exampleUser.yaml
+++ b/catalogs/exampleUser.yaml
@@ -1,7 +1,7 @@
 apiVersion: backstage.io/v1alpha1
 kind: User
 metadata:
-  name: mygithubname # This MUST match your Github account name
+  name: utherp0 # This MUST match your Github account name
 spec:
   profile:
     displayName: Me On RHDH # Can be anything, defaults to metadata.name
