--- a/catalogs/templatetest.yaml
+++ b/catalogs/templatetest.yaml
@@ -3,7 +3,7 @@ apiVersion: scaffolder.backstage.io/v1beta3
 kind: Template
 # some metadata about the template itself
 metadata:
-  name: v1beta3-demo
+  name: rhdhdemo1
   title: RHDH Test Scaffold template from Backstage
   description: scaffolder v1beta3 template demo
 spec:
